- Added styling - Completed implementation of calculation functions -

--- a/Experiments/Shopping Cart/css/cart.css
+++ b/Experiments/Shopping Cart/css/cart.css
@@ -39,10 +39,8 @@
     font-size:0.9em;
 }
 
-#buy{
-    float: left;
-    position: fixed;
-
+.buyContainer{
+    float: right;
 }
 
 #shoppingCart{
