--- a/Experiments/calculator/css/calculator.css
+++ b/Experiments/calculator/css/calculator.css
@@ -26,7 +26,7 @@
     border-radius: 10px;
     height: 60px;
     margin: 10px;
-    background-color: blue; /*#A2E876;*/
+    background-color: #A2E876;
     -moz-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) inset;
     -webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) inset;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) inset;
