Implemented state name header, for hover on state, statebox AND the text (much harder than it sounds)

--- a/Experiments/map/css/map.css
+++ b/Experiments/map/css/map.css
@@ -7,3 +7,21 @@ path {
     stroke: #fff;
     stroke-width: 1px;
 }
+
+#mapContainer{
+    width:960px;
+}
+
+#stateName{
+    position: relative;
+    left: 40px;
+    top: 4px;
+    height:24px;
+    font-size: 24px;;
+    text-align: center;
+}
+
+#mapContainer svg{
+    position: absolute;
+    top: 32px;
+}
