--- a/Experiments/map/css/map.css
+++ b/Experiments/map/css/map.css
@@ -7,6 +7,11 @@ path {
     fill: #ccc;
     stroke: #fff;
     stroke-width: 1px;
+    cursor: pointer;
+}
+
+rect {
+    cursor: pointer;
 }
 
 #mapContainer{
