--- a/backbone/style.css
+++ b/backbone/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Helvetica;
 }
 
-#header {
+#headerText {
   font-size: 15px;
   text-align: center;
   background-color: #8CC63E;
@@ -14,27 +14,33 @@ body {
   text-shadow: 0px 3px 7px rgba(0,0,0,0.7);
 }
 
-#headerText {
+#headerText span {
   top: 59px;
   position: relative;
 }
 
-#menuContainer {
-  width: 190px !important;
-  margin: 0 auto;
-}
-
 #selectList {
   font-size: 12px;
+  margin: 0 auto;
+  width: 190px !important;
   height: 26px;
   display: block;
   margin-top: 50px;
   border-radius: 4px;
-  background: -moz-linear-gradient(top, #fbfbfb 0%, #8e8e8e 100%);  FF3.6+
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fbfbfb), color-stop(100%,#8e8e8e));  Chrome,Safari4+
+  list-style: none;
+/*  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fbfbfb), color-stop(100%,#8e8e8e));  Chrome,Safari4+
   background: -webkit-linear-gradient(top, #fbfbfb 0%,#8e8e8e 100%);  Chrome10+,Safari5.1+
+  background: -moz-linear-gradient(top, #fbfbfb 0%, #8e8e8e 100%);  FF3.6+
   background: -o-linear-gradient(top, #fbfbfb 0%,#8e8e8e 100%);  Opera 11.10+
   background: -ms-linear-gradient(top, #fbfbfb 0%,#8e8e8e 100%);  IE10+
   background: linear-gradient(to bottom, #fbfbfb 0%,#8e8e8e 100%);  W3C
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fbfbfb', endColorstr='#8e8e8e',GradientType=0 );  IE6-9
+*/}
+
+#selectList li {
+  background: grey;
+}
+
+li#topItem {
+  background: red;
 }
