Proper event handling system in place. Final bit before it's done done is getting the attribute swap to work properly within Backbone's structure. Right now, stuff sets to true alright, but I haven't set the other options to false. Need to figure out how to access the other elements of a collection when changing a model's attribute

--- a/backbone/style.css
+++ b/backbone/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Helvetica;
 }
 
-#headerText {
+#headerBox {
   font-size: 15px;
   text-align: center;
   background-color: #8CC63E;
@@ -14,7 +14,7 @@ body {
   text-shadow: 0px 3px 7px rgba(0,0,0,0.7);
 }
 
-#headerText span {
+#headerText {
   top: 59px;
   position: relative;
 }
